2002-07-03  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/UML/element.py: Fixed bug and changed load() to queue
	signals. Changed postload to flush the queue.
	* gaphor/command: New directory. Here command classes will be stored.
	Simple and more complex operations should be executed through
	commands.
	* *all files*: changed module paths to the project root. So now we
	should include gaphor.UML in stead of UML.

2002-07-02  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* doc/gaphor.dtd: Allow text data in Value tag.
	* gaphor/UML/element.py: Restructured get/set attr stuff. Now it is
	more readable and better usable for e.g. tree models.
	* gaphor/UML/element.py: Changed signal protocol. Now old and new
	values are also parameters.
	* gaphor/diagram/(relationship.py|diagramitem.py|dependency.py):
	new files.
	* gaphor/misc/signal.py: Added signal queueing options (queue(),
	flush())
	* gaphor/misc: Added parsers using both libxml2 or xml.dom.minidom.
	(work in progress).

2002-03-28  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/misc/storage.py: Now use the standard Python XML stuff
	(with expat).
	* Various feature improvements and other nifty things...

2002-03-25  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/registrar.py: renamed to diagramitemfactory.py and
	created a full blown Factory.
	* gaphor/UML/diagram.py: removed create() method
	
2002-03-23  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor/diagram/diagram.py: moved to the UML module.
	* gaphor/misc/storage.py: now contains the load and save methods of
	ElementFactory.

2002-03-19  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* */Makefile.am: fized path for make install
	* gaphor/UML/*.py: made all files lower case.
	* gaphor/UML/elementfactory.py: New file. Factory for creating model
	elements.
	* gaphor/misc/: New directory. Added Makefile.am, singleton.py and
	command.py.
	* gaphor/UML/element.py: put Enumeration_ and Sequence in separate
	files.