@@ -1,5 +1,9 @@
 Makefile
 Makefile.in
+*.pyc
+*.pyo
+*.gaphor
+*.xml
 aclocal.m4
 confdefs.h
 config.cache
