@@ -28,7 +28,7 @@ class Diagram(Namespace):
         self.canvas = diacanvas.Canvas()
 	print 'Diagram:', self.canvas
 	self.canvas.set_undo_stack_depth(10)
-	self.canvas.set_property ("allow_undo", 1)
+	self.canvas.set_property ("allow_undo", 0) # was 1
 	print 'Diagram: allow undo =', self.canvas.get_property('allow_undo')
 
     def save(self, store):
@@ -99,4 +99,4 @@ class Diagram(Namespace):
 
 	self.canvas.update_now ()
 
-	self.canvas.set_property ("allow_undo", 1)
+	self.canvas.set_property ("allow_undo", 0) # was 1
