@@ -1,15 +1,15 @@
 # vim: sw=4
 
 from gaphor.misc.command import Command
-import gnome.ui
+#import gnome.ui
 
 class AboutCommand(Command):
 
     def execute(self):
-	about = gnome.ui.About('Gaphor',
-			       '0.1',
-			       'Copyright (c) 2001-2002 Arjan J. Molenaar',
-			       'UML Modeling for GNOME',
-			       ('Arjan J. Molenaar',))
-	about.show()
-
+#	about = gnome.ui.About('Gaphor',
+#			       '0.1',
+#			       'Copyright (c) 2001-2002 Arjan J. Molenaar',
+#			       'UML Modeling for GNOME',
+#			       ('Arjan J. Molenaar',))
+#	about.show()
+	pass
