@@ -1,3 +1,9 @@
+2002-07-04  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
+
+	* gaphor/tree: Directory removed, namespace.py is moved to gaphor/ui.
+	* gaphor/command: moved to gaphor/ui.command
+	* gaohor/UML/diagram.py: fixed bug in loading code.
+
 2002-07-03  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
 
 	* gaphor/UML/element.py: Fixed bug and changed load() to queue
